[package]
name = "asn-cn"
version = "0.1.0"
edition = "2021"
authors = ["Homing So <i@homing.so>"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.4.2", features = ["d1", "http", "axum"] }
worker-macros = { version = "0.4.2", features = ["http"] }
console_error_panic_hook = { version = "0.1.7" }
axum = { version = "0.7.7", features = ["macros"], default-features = false }
tower-service = "0.3.3"
reqwest = "0.12.8"
regex = "1.11.0"
futures = "0.3.31"
serde = "1.0.210"
serde_json = "1.0.128"
lazy_static = "1.5.0"
