[package]
name = "asn-cn"
version = "0.1.0"
edition = "2021"
authors = ["Homing So <i@homing.so>"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
lto = true
strip = true
codegen-units = 1

[lib]
crate-type = ["cdylib"]

[workspace]
members = [".", "api", "crawler", "entity", "service"]

[dependencies]
worker = { version = "0.4.2", features = ["http", "axum"] }
worker-macros = { version = "0.4.2", features = ["http"] }
axum = { version = "0.7.7", default-features = false }
tower-service = "0.3.3"

console_error_panic_hook = { version = "0.1.7" }

crawler = { path = "crawler" }
service = { path = "service" }
api = { path = "api" }
