[package]
name = "asn-cn"
version = "0.1.0"
edition = "2021"
authors = ["Homing So <i@homing.so>"]

[package.metadata.release]
release = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[profile.release]
lto = true
strip = true
codegen-units = 1

[lib]
crate-type = ["cdylib"]

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = { version = "0.4" }

async-trait = { version = "0.1" }
lazy_static = { version = "1.5"}
chrono = { version = "0.4" }
oneshot = { version = "0.1" }

serde = { version = "1" }
serde_json = { version = "1" }

regex = { version = "1.11" }
reqwest = { version = "0.12"}

sea-orm = { version = "1.1.0", features = [
    "macros",
    "proxy",
    "with-json",
], default-features = false }

worker = { version = "0.5.0", features = ["http", "axum", "d1"] }
axum = { version = "0.7.9", features = ["macros"], default-features = false }

api = { path = "crates/api" }
crawler = { path = "crates/crawler" }
entity = { path = "crates/entity" }
service = { path = "crates/service" }

[dependencies]
worker = { workspace = true, features = ["http", "axum"] }
axum = { workspace = true, default-features = false }
tower-service = "0.3.3"

console_error_panic_hook = { version = "0.1.7" }

crawler.workspace = true
service.workspace = true
api.workspace = true
