[package]
name = "api"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Homing So <i@homing.so>"]

[lib]
name = "api"
path = "src/lib.rs"

[dependencies]
worker = { version = "0.4.2", features = ["d1", "http", "axum"] }
worker-macros = { version = "0.4.2", features = ["http"] }
axum = { version = "0.7.7", features = ["macros"], default-features = false }

service = { path = "../service" }
