[package]
name = "api"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Homing So <i@homing.so>"]

[lib]
name = "api"
path = "src/lib.rs"

[dependencies]
worker = { workspace = true, features = ["d1", "http", "axum"] }
axum = { workspace = true, features = ["macros"], default-features = false }

service.workspace = true
