[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Homing So <i@homing.so>"]

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true, features = ["derive"] }
sea-orm = { workspace = true, features = ["macros"], default-features = false }
